packages/legacy-workbench/src/css/shepherd-custom.css
.btn-primary.shepherd-button:hover {
    background-color: var(--gw-button-primary-hover-background);
    color: var(--gw-button-primary-hover-color);
}

.btn-primary.shepherd-button[disabled]{
    opacity: 0.5;
}

.btn-secondary.shepherd-button:hover {
    background-color: var(--gw-button-secondary-hover-background);
    color: var(--gw-button-secondary-hover-color);
}

.shepherd-element {
    border-radius: 0;
    max-width: 500px;
}

.shepherd-content {
    border-radius: 0;
}

.shepherd-header {
    border-radius: 0;
}

.shepherd-header h3 {
    padding-left: 0.5em;
}

.shepherd-text {
    text-align: center;
    min-height: 90px;
    margin-top: 10px;
    overflow-wrap: break-word;
    color: var(--gw-dialog-color);
}

.shepherd-text ol, .shepherd-text ul {
    text-align: left;
}

.shepherd-text code {
    text-align: left;
    display: block;
    height: 120px;
    margin-top: 0.5em;
    color: var(--gw-secondary-base);
    background-color: var(--gw-tertiary-lighter);
    overflow: auto;
    white-space: pre-wrap;
}

.shepherd-has-title .shepherd-content {
    background-color: var(--gw-dialog-background);
    color: var(--gw-dialog-color);
    border: 1px solid var(--gw-dialog-border-color);
}

.shepherd-has-title .shepherd-content .shepherd-header {
    padding-top: 0.5em;
    padding-bottom: 0.5em;
    background-color: var(--gw-dialog-background);
    color: inherit;
    border-bottom: 1px solid var(--gw-dialog-border-color);
}

.shepherd-has-title .shepherd-content .shepherd-title {
    color: inherit;
}

.shepherd-has-title .shepherd-content .shepherd-cancel-icon {
    color: var(--gw-dialog-color) !important;
}

.shepherd-has-title .shepherd-content .shepherd-cancel-icon:hover {
    color: var(--gw-button-primary-background) !important;
}

.shepherd-footer {
    padding-bottom: 0.5em;
}

.shepherd-arrow:before {
    background-color: var(--gw-dialog-background) !important;
    border: 1px solid var(--gw-dialog-border-color) !important;
}

/*
  Moves the 'Previous' button to the left when it's the only button shown.
  This avoids UX confusion, as primary actions ('Next') is usually on the right.
*/
.shepherd-footer:has(> .shepherd-prev-button:only-child) {
    justify-content: flex-start;
}

.shepherd-progress {
    display: block;
    text-align: right;
    padding-right: 1em;
    font-size: 0.9em;
}

.shepherd-code {
    position: relative;
}

.shepherd-code button {
    position: absolute;
    bottom: 5px;
    right: 5px;
}

.guide-dialog.shepherd-element[data-popper-placement="top"] {
    margin-top: -12px;
}

.guide-dialog.shepherd-element[data-popper-placement="right"] {
    margin-left: 12px;
}

.guide-dialog.shepherd-element[data-popper-placement="bottom"] {
    margin-top: 12px;
}

.guide-dialog.shepherd-element[data-popper-placement="left"] {
    margin-left: -12px;
}

.guide-dialog.shepherd-element.visual-graph-link-focus-guide-dialog {
    margin-top: -52px;
}

.guide-copy-to-input-query-button,
.guide-copy-to-editor-query-button {
    color: var(--gw-button-secondary-color);
    background-color: var(--gw-shortcuts-secondary-button-background);
    border-color: var(--gw-button-secondary-border-color);
}

